# grumpkin-msm

./: .gitignore  Cargo.toml  README.md  ThirdPartyNotices.txt  build.rs  cross_term_abs.txt  cross_term_dev.txt  witness_abs.txt  witness_dev.txt
.cargo/: config
.github/workflows/: gpu-ci.yml  test.yml
benches/: grumpkin_msm.rs  grumpkin_spmvm.rs  msm.rs  pasta_msm.rs
cross_term_stats/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
cuda/: bn254.cu  grumpkin.cu  pallas.cu  vesta.cu
examples/: grumpkin_msm.rs  grumpkin_spmvm.rs  lurk.rs  msm.rs  pasta_msm.rs
src/: grumpkin_pippenger.cpp  lib.rs  pasta.rs  pippenger.cpp  tests.rs  utils.rs
src/spmvm/: grumpkin.rs  mod.rs  utils.rs
stats/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
